# AdvancedWebTechCoursework

./: README.md  pyproject.toml  run.sh
docs/: notes.md
docs/schema/: response.schema.json
src/: env.py  main.py  net.py
src/static/: main.css  main.js
src/templates/: index.html
src/tools/: klipper-get.py
