[tool.poetry]
name = "printer-status-v2"
version = "0.1.0"
description = "Webpage to display information about your Klipper 3d printer"
authors = ["Jacob <jacob@jaso5.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
# server = "src.main:run"
klipper-get = 'src.tools.klipper-get:run'
net-test = 'src.net:run'

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
flask = "^3.0.3"
paho-mqtt = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
